--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-03.cleardb.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_aa2c2b98504f9e2
+DB_USERNAME=bc25dbe18bb853
+DB_PASSWORD=05595cd3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
